--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700%7CRoboto%20Condensed:300,400,700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700%7CRoboto%20Condensed:300,400,700&amp;display=swap" 
+    rel="stylesheet">
     <!--------------------->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
@@ -62,12 +63,18 @@
                     <div class="trt"></div>
                 </span>
                 <p class="txt1">Salut, <br>
-moi c'est Ange Kano Gnohouhei Desire Stephane etudiant en Licence II Miage à l'universite politechnique de Bingervile (UPB),
-je me propose de faire cette petite Landing Page pour vous presenter les competences dansles quel je vous serai utile et pourquoi pas 
+moi c'est Ange Kano Gnohouhei Desire Stephane etudiant en Licence II Miage 
+à l'universite politechnique de Bingervile (UPB),
+je me propose de faire cette petite Landing Page pour vous presenter les 
+competences dansles quel je vous serai utile et pourquoi pas 
 avoir un jour l'opportuniter de fonder ma StartUp.
-2 Ans sont passe de puis mes debut dans le monde de la programation et du developpement web ,je ne mentirai si je disait que ceux milleu
-me deplait plus les jours avance plus ma passion et mon envie devient plus grande ,c'est ce qui me motive a me former encore plus ,
-d'ou ma prensece sur plusieur site de formation Telle que Udemy,EDX,OpenClassroom,... qui sont des sites que conseillerai a tout Debutant danqs se domainecomme moi.
+2 Ans sont passe de puis mes debut dans le monde de la programation et 
+du developpement web ,je ne mentirai si je disait que ceux milleu
+me deplait plus les jours avance plus ma passion et mon envie devient 
+plus grande ,c'est ce qui me motive a me former encore plus ,
+d'ou ma prensece sur plusieur site de formation Telle que Udemy,EDX,
+OpenClassroom,... qui sont des sites que conseillerai a tout Debutant 
+danqs se domainecomme moi.
 ci-dessous se trouve un petit recap de mon nivieau dans certains language .
   </p>
             </div>
@@ -252,19 +259,22 @@ ci-dessous se trouve un petit recap de mon nivieau dans certains language .
             <div class="ree">
                 <div class="im1">
                     
-                    <img src="img/112.PNG" alt="">
+                    <img src="112.jpg" alt="">
                     <div class="tts">
                         <span>Dev'People</span><br><br>
-                        <p>C'est une platform de prestation de service qui vise a proposer nos service dans les domaines wb de technologies de formation 
+                        <p>C'est une platform de prestation de service qui vise a proposer 
+                            nos service dans les domaines wb de technologies de formation 
                             developper par la StartUp Dev'People dont je fait partit ... 
                         </p>
                     </div>
                 </div>
                 <div class="im2">
-                    <img src="img/2.PNG" alt="" >
+                    <img src="2.jpg" alt="" >
                     <div class="tts">
                         <span>E-Commerce</span><br><br>
-                        <p>Site de E-commerce qui facilite la vente et la distrubution de produit commerciaux dans le soucis de mieux structurer sont Buisness
+                        <p>Site de E-commerce qui facilite la vente et la distrubution de 
+                            produit commerciaux dans
+                             le soucis de mieux structurer sont Buisness
                             et augmneter ces revenues ...
                         </p>
                     </div>
@@ -272,54 +282,64 @@ ci-dessous se trouve un petit recap de mon nivieau dans certains language .
             </div>
             <div class="ree">
                 <div class="im1">
-                    <img src="3.PNG" alt="">
+                    <img src="3.jpg" alt="">
                     <div class="tts">
                         <span>Mise en Base de Donnée</span><br><br>
-                        <p>Importation et Gestion des differentes tables d'universite avec pour objetif de repertorie la totalite des informations concernant les acteurs s'y trouvant 
+                        <p>Importation et Gestion des differentes tables
+                             d'universite avec pour objetif de repertorie la totalite des 
+                             informations concernant les acteurs s'y trouvant 
                             Language Utilise SQL
                         </p>
                     </div>
                 </div>
                 <div class="im2">
-                    <img src="4.PNG" alt="" >
+                    <img src="4.jpg" alt="" >
                     <div class="tts">
                         <span>Blocko University</span><br><br>
-                        <p>Dans le cadre d'un projet scolaire il nous ai demander de concevoir un site web mettant en relation Enseignant Eleve et membre de l'administration pour une meilleur gestion de 
-                            donnees de acteur intervenant via des session partagé et n'ayant pas les meme accessibilité ...
+                        <p>Dans le cadre d'un projet scolaire il nous ai demander de concevoir 
+                            un site web mettant en relation 
+                            Enseignant Eleve et membre de l'administration pour une meilleur gestion de 
+                            donnees de acteur intervenant via des session partagé et n'ayant pas les 
+                            meme accessibilité ...
                         </p>
                     </div>
                 </div>
             </div>
             <div class="ree">
                 <div class="im1">
-                    <img src="5.PNG" alt="">
+                    <img src="5.jpg" alt="">
                     <div class="tts">
                         <span>Exercice de classe</span><br><br>
-                        <p>Maitrise et connaissance des outils metodes de classification de mise en page grace au outils des Language HTML CSS JAVA SRCIPT ,qui par leur biais 
+                        <p>Maitrise et connaissance des outils metodes de classification de mise 
+                            en page grace au outils des Language HTML
+                             CSS JAVA SRCIPT ,qui par leur biais 
                             facilite la presentation de prduit par exemple ...
                         </p>
                     </div>
                 </div>
                 <div class="im2">
-                    <img src="8.png" alt="" style="width = auto">
+                    <img src="8.jpg" alt="" >
                     <div class="tts">
                         <span>Genie UPB (Agriculture)</span><br><br>
-                        <p>Dans le cadre du concours Genie UPB qui se deroule chaque anne au sains de l'universite polytechnique de Bigerville (UPB) ;comme theme l'apport des TIC dans le milieux Agricole 
-                            qui a vue la participation de tout les etudiant de l'Université (Concours qui se poursuit toujours )...
+                        <p>Dans le cadre du concours Genie UPB qui se deroule chaque anne au 
+                            sains de l'universite polytechnique de Bigerville (UPB) ;comme 
+                            theme l'apport des TIC dans le milieux Agricole 
+                            qui a vue la participation de tout les etudiant de l'Université 
+                            (Concours qui se poursuit toujours )...
                         </p>
                     </div>
                 </div>
             </div>
             <div class="ree">
                 <div class="im1">
-                    <img src="7.png" alt="">
+                    <img src="7.jpg" alt="">
                     <div class="tts">
                         <span>Projet personnel Adobe Illustrator</span><br><br>
                         <p>Illustration Fun a des but personnel ...</p>
                     </div>
                 </div>
                 <div class="im2">
-                    <img src="10.jpg" alt="" >
+                    <img src="101.jpg" alt="" >
                     <div class="tts">
                         <span>Projet personnel Adobe Illustrator</span><br><br>
                         <p>Illustration Fun a des but personnel ...</p>
@@ -349,23 +369,24 @@ ci-dessous se trouve un petit recap de mon nivieau dans certains language .
             </span>
         </div>
     </section>
-    <span>
-    <p style="color:white;text-align:center;margin:20px 0;">
-                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |
+    <span class="ltxt">
+    <p style="color:rgb(83, 82, 82);text-align:center;margin:40px 0 0 0;font-size: clamp(1px,5vw,12px)!important;">
+                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> 
+                  All rights reserved |
                    This template is made by 
-                   <a href="#" target="_blank" style="text-decoration:none">Portfolio | Ange Kano</a>
+                   <a href="#" target="_blank" style="text-decoration:none;color:rgb(83, 82, 82);">Portfolio | Ange Kano</a>
     </p>
     </span>
 </footer>
 
     <script src="app.js"></script>
-    <!-- <script>
+  <script>
       $(document).ready(function(){
         $('.btn').click(function(){
           $('.items').toggleClass("show");
           $('').toggleClass("hide");
         });
       });
-   </script> -->
+   </script> 
 </body>
 </html>
